ArchivOn - drobné opravy